﻿S2Dao.NET 1.0.2
2006/??/??
- [DAONET-35]DaoMetaDataImplとAbstractBeanMetaDataDataReaderHandlerを拡張できるようにリファクタリングする
- [DAONET-36]PostgreSQL前提のテストであるSequenceIdentifierGeneratorTestをOracleなどSequence機能があるDBMSでもテストが通るように修正する。
- [DAONET-37]「IF&埋め込み変数」コメントが正常なのにWarnログが発生する

S2Dao.NET 1.0.1
2006/11/8
- [DAONET-19]ID属性とTimestamp属性で指定されたプロパティでNullables型に対応する
- [DAONET-32]S2Unit.NETが参照しているMbUnitのバージョンを最新版にする。
             S2Unit.NETを使用する場合、MbUnit 2.3.83以上をインストールする必要がある。
- [DAONET-33]Nunit関連のdllファイルを削除する
- [DAONET-34]複数行取得する際にカラム情報をキャッシュすることでパフォーマンスを向上させる

S2Dao.NET 1.0.0
2006/9/25

変更無し

S2Dao.NET 1.0.0-rc1
2006/9/5

- [DAONET-6]トランザクションを指定しない場合でも、identityで自動生成された値をセットするようにする
- [DAONET-27].NET 2.0のnull許容型に対応する
- [DAONET-28]Daoメソッドの戻り値の型に、Entity型を要素としたListジェネリッククラスを使用できるようにする