@@ -64,6 +64,22 @@ CREATE TABLE [dbo].[EMP_NULLABLE] (
 	CONSTRAINT [PK_EmployeeNullable] PRIMARY KEY CLUSTERED ([EMPNO]))
 GO
 
+CREATE TABLE [dbo].[GENERIC_NULLABLE](
+	[Id] [numeric](38, 0) IDENTITY(1,1) NOT NULL,
+	[Date] [datetime] NULL,
+	[EntityNo] [int] NULL,
+ CONSTRAINT [PK_GENERIC_NULLABLE] PRIMARY KEY CLUSTERED 
+(
+	[Id] ASC
+)WITH (PAD_INDEX  = OFF, IGNORE_DUP_KEY = OFF) ON [PRIMARY],
+ CONSTRAINT [AK_GENERRIC_NULLABLE_ENTITY_NO] UNIQUE NONCLUSTERED 
+(
+	[EntityNo] ASC
+)WITH (PAD_INDEX  = OFF, IGNORE_DUP_KEY = OFF) ON [PRIMARY]
+) ON [PRIMARY]
+
+GO
+
 CREATE TABLE [dbo].[IDENTITYTABLE] (
 	[ID] [int] IDENTITY (1, 1) NOT NULL ,
 	[NAME] varchar (20) COLLATE Japanese_CI_AS NULL ,
@@ -116,6 +132,8 @@ INSERT INTO [dbo].[EMP2] VALUES(7499,'ALLEN',30)
 INSERT INTO [dbo].[EMP_NULLABLE] VALUES(1,'ADAMS','CLERK',7788,CONVERT(datetime,'1983-01-12'),1100,NULL,20,CONVERT(datetime,'2000-01-01 00:00:00.0'),CONVERT(datetime,'2006-11-07'))
 INSERT INTO [dbo].[EMP_NULLABLE] VALUES(10,'JAMES','CLERK',7698,CONVERT(datetime,'1981-12-03'),950,NULL,30,CONVERT(datetime,'2000-01-01 00:00:00.0'),null)
 INSERT INTO [dbo].[EMP_NULLABLE] VALUES(100,'FORD','ANALYST',7566,CONVERT(datetime,'1981-12-03'),3000,NULL,20,CONVERT(datetime,'2000-01-01 00:00:00.0'),CONVERT(datetime,'2006-11-07'))
+INSERT INTO [dbo].[GENERIC_NULLABLE] (Date,EntityNo) VALUES(getdate(), 100)
+INSERT INTO [dbo].[GENERIC_NULLABLE] (Date,EntityNo) VALUES(null, 101)
 INSERT INTO [dbo].[DEPT2] VALUES(20,'RESEARCH',1)
 INSERT INTO [dbo].[DEPT2] VALUES(30,'SALES',0)
 INSERT INTO [dbo].[DUAL] VALUES('X')
