@@ -3,6 +3,7 @@
 - [DAONET-35]DaoMetaDataImplとAbstractBeanMetaDataDataReaderHandlerを拡張できるようにリファクタリングする
 - [DAONET-36]PostgreSQL前提のテストであるSequenceIdentifierGeneratorTestをOracleなどSequence機能があるDBMSでもテストが通るように修正する。
 - [DAONET-37]「IF&埋め込み変数」コメントが正常なのにWarnログが発生する
+- [DAONET-39] IdentityとTimestampのNullable対応をNET2.0版Nullableにも適用する
 
 S2Dao.NET 1.0.1
 2006/11/8
